<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorAccent">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:contentDescription="@null"
            android:padding="15dp"
            android:src="@drawable/icon_back_white" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/feedback"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <RadioGroup
            android:id="@+id/rg_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbtn_suggest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp10"
                android:layout_marginRight="@dimen/dp10"
                android:text="@string/suggest" />

            <RadioButton
                android:id="@+id/rbtn_complain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp10"
                android:layout_marginRight="@dimen/dp10"
                android:text="@string/complain" />

            <RadioButton
                android:id="@+id/rbtn_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message" />
        </RadioGroup>

        <EditText
            android:id="@+id/ed_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_label_orange"
            android:hint="@string/email_input"
            android:inputType="textEmailAddress"
            android:padding="@dimen/dp8"
            android:textColorHint="#999"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/ed_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_label_orange"
            android:gravity="start|top"
            android:hint="@string/feedback_tip"
            android:inputType="textMultiLine"
            android:lines="10"
            android:padding="@dimen/dp8"
            android:textColorHint="#999"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_btn_orange"
            android:text="@string/submit"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />

    </LinearLayout>
</LinearLayout>