<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="87dp"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/ic_launcher" />

    <cc.ibooker.zedittextlib.ClearEditText
        android:id="@+id/ed_account"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginEnd="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/bg_e9f0ee_corner_4"
        android:hint="@string/account_hint"
        android:inputType="phone"
        android:maxLength="11"
        android:paddingEnd="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingStart="20dp"
        android:textColorHint="#a2bebb"
        android:textSize="15sp" />

    <cc.ibooker.zedittextlib.PasswdEditText
        android:id="@+id/ed_passwd"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginEnd="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_e9f0ee_corner_4"
        android:hint="@string/passwd_hint"
        android:inputType="textPassword"
        android:maxLength="18"
        android:paddingEnd="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingStart="20dp"
        android:textColorHint="#a2bebb"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginEnd="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/bg_btn_fe7517_corner_4"
        android:text="@string/login"
        android:textColor="#FFF"
        android:textSize="16sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/tv_account_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/reg_account"
            android:textColor="#666"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_forget_passwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/forget_passwd"
            android:textColor="#666"
            android:textSize="14sp"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>
</LinearLayout>