<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="22dp"
            android:gravity="center_vertical"
            android:paddingEnd="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingStart="20dp"
            android:text="@string/article"
            android:textColor="#555" />

        <TextView
            android:id="@+id/tv_local"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/location"
            android:drawablePadding="40dp"
            android:drawableStart="@drawable/location"
            android:gravity="center_vertical"
            android:paddingBottom="15dp"
            android:paddingEnd="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingStart="20dp"
            android:paddingTop="15dp"
            android:text="@string/local"
            android:textColor="#333" />

        <TextView
            android:id="@+id/tv_recommend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/recommend"
            android:drawablePadding="40dp"
            android:drawableStart="@drawable/recommend"
            android:gravity="center_vertical"
            android:paddingBottom="15dp"
            android:paddingEnd="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingStart="20dp"
            android:paddingTop="15dp"
            android:text="@string/recommend"
            android:textColor="#333" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.8dp"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp"
            android:background="#DEDEDE" />

        <TextView
            android:id="@+id/tv_grammar_reference"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/question"
            android:drawablePadding="40dp"
            android:drawableStart="@drawable/question"
            android:gravity="center_vertical"
            android:paddingBottom="15dp"
            android:paddingEnd="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingStart="20dp"
            android:paddingTop="15dp"
            android:text="@string/grammar_reference"
            android:textColor="#333" />

        <TextView
            android:id="@+id/tv_set"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/set"
            android:drawablePadding="40dp"
            android:drawableStart="@drawable/set"
            android:gravity="center_vertical"
            android:paddingBottom="15dp"
            android:paddingEnd="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingStart="20dp"
            android:paddingTop="15dp"
            android:text="@string/set"
            android:textColor="#333" />

        <TextView
            android:id="@+id/tv_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/feedback"
            android:drawablePadding="40dp"
            android:drawableStart="@drawable/feedback"
            android:gravity="center_vertical"
            android:paddingBottom="15dp"
            android:paddingEnd="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingStart="20dp"
            android:paddingTop="15dp"
            android:text="@string/feedback"
            android:textColor="#333" />

        <TextView
            android:id="@+id/tv_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/star"
            android:drawablePadding="40dp"
            android:drawableStart="@drawable/star"
            android:gravity="center_vertical"
            android:paddingBottom="15dp"
            android:paddingEnd="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingStart="20dp"
            android:paddingTop="15dp"
            android:text="@string/score"
            android:textColor="#333" />

        <TextView
            android:id="@+id/tv_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/about"
            android:drawablePadding="40dp"
            android:drawableStart="@drawable/about"
            android:gravity="center_vertical"
            android:paddingBottom="15dp"
            android:paddingEnd="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingStart="20dp"
            android:paddingTop="15dp"
            android:text="@string/about"
            android:textColor="#333" />

    </LinearLayout>
</ScrollView>